<resources>
    <string name="app_name">Rain Computing</string>
    <string name="rain">RAIN</string>
    <string name="sign_uo"><![CDATA[Sign up >]]></string>
    <string name="down">down</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="send">send</string>
    <string name="the_case_name_goes_here">the case name goes here</string>
    <string name="add">add</string>
    <string name="option">option</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="create_password">Create Password</string>
    <string name="retypepassword">Re-Enter Passeord</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login_in">Login</string>
    <string name="create_account">Create Account</string>
    <string name="txtforgot">Forgot Password ?</string>
    <string name="txtcaption">Please enter email to receive the rest link</string>
    <string name="sendrequest">Send Request</string>
    <string name="btnpassword">New Password</string>
    <string name="txtpassword">New Password</string>
    <string name="please_create_a_new_password">Please create a new password</string>
    <string name="new_password">New Password</string>
    <string name="btnretype">Re-Type Password</string>
    <string name="change">Change Password</string>
    <string name="VLC">vlc</string>
    <string name="CCleaner">ccleaner</string>
    <string name="Menu">menu</string>
    <string name="myapps">My Apps</string>
    <string name="_7zip">7zip</string>
    <string name="vc">vc</string>
    <string name="chat">chat</string>
    <string name="ccleaner">CCleaner</string>
    <string name="vlc">VLC</string>
    <string name="vs_code">Vs code</string>
    <string name="search">search</string>
    <string name="discover">discover</string>
    <string name="download">download</string>
    <string name="appfocus">appfocus</string>
    <string name="avatar">avatar</string>
    <string name="conatct">conatct</string>
    <string name="apps">apps</string>
    <string name="chatcase">Case</string>
    <string name="contact">Contact</string>
    <string name="recent">Recent</string>
    <string name="all">All</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="company_name">Company name</string>
    <string name="group">Group</string>
    <string name="catagory">Category</string>
    <string name="txtphone">123 456 7890</string>
    <string name="address">Address</string>
    <string name="txtaddress">234 dsfgdfg rd bostan ma 01234</string>
    <string name="txtemail">emailaddress@gmail.com</string>
    <string name="practice_area">Practice Area</string>
    <string name="the_name_of_the_case">The name of the case</string>
    <string name="casenumber">123 456 7890</string>
    <string name="create_case">Create Case +</string>
    <string name="cases">Cases</string>
    <string name="create_contact">Create Contact +</string>
    <string name="txtsearch">Search</string>
    <string name="message">Message</string>
    <string name="open">Open</string>
    <string name="arrow">Arrow</string>
    <string name="information">Information</string>
    <string name="my_apps">My Apps</string>
    <string name="grid">Grid</string>
    <string name="price">$0.99</string>
    <string name="recommand">Recommendation</string>
    <string name="updates">Updates</string>
    <string name="update">Update</string>
    <string name="all_recipient_5">All Recipient</string>
    <string name="_1234_5678">123-456</string>
    <string name="appname">App Name</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="sub_item_1">Sub Item 1</string>
    <string name="sub_item_2">Sub Item 2</string>
    <string name="casesetting">Case Setting</string>
    <string name="member">Member Setting</string>
    <string name="sendset">Send Setting</string>
    <string name="requestset">Request Setting</string>
    <string name="closecase">Close Case</string>
    <string name="cancelcase">Cancel Case</string>
    <string name="message_notification">Message notification</string>
    <string name="case_setting">Case Setting</string>
    <string name="case_number_and_name">Case Number and Name</string>
    <string name="case_members">Case Members</string>
    <string name="client_name">Client name</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="pending_messages">Pending messages</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="case_notification">Case notification</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="casedescription">Case Description</string>
    <string name="case_description">Case Description</string>
    <string name="save">Save</string>
    <string name="CaseNumberandName">Case Number And Name</string>
    <string name="case_number">Case Number</string>
    <string name="case_name">Case Name</string>
    <string name="CaseDescription">Case Description</string>
    <string name="CaseMenmbers">Case Member</string>
    <string name="edit">edit</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="loinkedin">link</string>
    <string name="login_with">"login "</string>
    <string name="twitter">twitter</string>
    <string name="email">email</string>
    <string name="the_best_legal_case_manager">the best legal case manager</string>
    <string name="welcome_to_rain">Welcome to rain</string>
    <string name="email_verfication">Email Verification</string>
    <string name="don_t_receive_the_code">Didn\'t Recieve The Code ?</string>
    <string name="please_enter_the_verifivarion_code_that_we_sent">Please enter the verifivarion code that we sent</string>
    <string name="Verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="login">login</string>
</resources>