<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verification">
    ​

    <ImageView
        android:id="@+id/logo"
        android:layout_width="325dp"
        android:layout_height="59dp"
        android:contentDescription="@android:string/untitled"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        app:srcCompat="@drawable/rain" />
    ​
    <TextView
        android:id="@+id/welcome"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/welcome_to_rain"
        android:textColor="@android:color/holo_blue_light"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Welcome to Rain" />
    ​
    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/the_best_legal_case_manager"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />
    ​
    <TextView
        android:id="@+id/txtnewpassword"
        android:layout_width="190dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/email_verfication"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption"
        app:layout_constraintVertical_bias="0.015" />
    ​
    <TextView
        android:id="@+id/passwordcaption2"
        android:layout_width="166dp"
        android:layout_height="25dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/don_t_receive_the_code"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnewpassword"
        app:layout_constraintVertical_bias="0.617"
        tools:text="don't receive the code?" />
    ​
    <TextView
        android:id="@+id/passwordcaption"
        android:layout_width="348dp"
        android:layout_height="33dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/please_enter_the_verifivarion_code_that_we_sent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnewpassword"
        app:layout_constraintVertical_bias="0.0" />
    ​
    <EditText
        android:id="@+id/opt"
        android:layout_width="296dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint=""
        android:inputType="textEmailAddress"
        android:shadowColor="#0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558"
        tools:ignore="LabelFor" />
    ​

    <Button
        android:id="@+id/newbutton"
        android:onClick="cases"
        android:layout_width="257dp"
        android:layout_height="55dp"
        android:background="#5C87E6"
        android:text="@string/Verify"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />
    ​
    <ImageView
        android:id="@+id/twitter"
        android:layout_width="39dp"
        android:layout_height="33dp"
        android:contentDescription="@string/twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/google"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/twitter" />
    ​

    <ImageView
        android:id="@+id/google"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:contentDescription="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/google_logo" />
    ​
    <ImageView
        android:id="@+id/facebook"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:contentDescription="@string/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toEndOf="@+id/linked"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/facebook" />
    ​
    <ImageView
        android:id="@+id/linked"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:contentDescription="@string/loinkedin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/loginwith"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/linkedin" />
    ​
    <TextView
        android:id="@+id/loginwith"
        android:layout_width="69dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/login_with"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        tools:text="Login With" />
    ​
    <TextView
        android:id="@+id/sign_in"
        android:onClick="signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="?attr/actionModeSplitBackground"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbutton"
        app:layout_constraintVertical_bias="0.8" />
    ​
    <TextView
        android:id="@+id/resend"
        android:layout_width="50dp"
        android:layout_height="21dp"
        android:layout_marginBottom="50dp"
        android:focusable="true"
        android:text="@string/resend"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="?attr/actionModeSplitBackground"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbutton"
        app:layout_constraintVertical_bias="0.141" />
    ​
    <TextView
        android:id="@+id/login_in"
        android:onClick="login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:focusable="true"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="?attr/actionModeSplitBackground"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbutton"
        app:layout_constraintVertical_bias="0.803" />
    ​
</androidx.constraintlayout.widget.ConstraintLayout>