<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myapps">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Apps"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/list"
        android:layout_width="407dp"
        android:layout_height="554dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.254" />

    <ImageView
        android:id="@+id/imageView2"
        android:onClick="cases"
        android:layout_width="80dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/chat" />
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="413dp"
        android:layout_height="51dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/search"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/search"
            android:scrollbarThumbHorizontal="@android:color/darker_gray"
            android:scrollbarThumbVertical="@android:color/darker_gray"
            android:scrollbarTrackHorizontal="@android:color/darker_gray"
            android:scrollbarTrackVertical="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.197"
            app:srcCompat="@drawable/search_tabs" />

        <ImageView
            android:id="@+id/discover"
            android:layout_width="38dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp"
            android:layout_marginBottom="11dp"
            android:contentDescription="@string/discover"
            android:scrollbarThumbHorizontal="@android:color/darker_gray"
            android:scrollbarThumbVertical="@android:color/darker_gray"
            android:scrollbarTrackHorizontal="@android:color/darker_gray"
            android:scrollbarTrackVertical="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.197"
            app:srcCompat="@drawable/discover" />

        <ImageView
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="318dp"
            android:layout_marginRight="318dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/grid"
            android:scrollbarThumbHorizontal="@android:color/darker_gray"
            android:scrollbarThumbVertical="@android:color/darker_gray"
            android:scrollbarTrackHorizontal="@android:color/darker_gray"
            android:scrollbarTrackVertical="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.197"
            app:srcCompat="@drawable/grid" />

        <ImageView
            android:id="@+id/download"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="241dp"
            android:layout_marginRight="241dp"
            android:layout_marginBottom="9dp"
            android:contentDescription="@string/download"
            android:scrollbarThumbHorizontal="@android:color/darker_gray"
            android:scrollbarThumbVertical="@android:color/darker_gray"
            android:scrollbarTrackHorizontal="@android:color/darker_gray"
            android:scrollbarTrackVertical="@android:color/darker_gray"
            app:srcCompat="@drawable/download" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>